--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@splidejs/react-splide": "^0.7.12",
     "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
