--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^16.0.1",
     "@splidejs/react-splide": "^0.7.12",
     "contentful": "^11.5.14",
     "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
