--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@splidejs/react-splide": "^0.7.12",
     "contentful": "^11.5.14",
+    "firebase": "^11.6.0",
+    "groq-sdk": "^0.19.0",
     "gsap": "^3.12.7",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
